#
# Copyright 2021 Rovio Entertainment Corporation
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

[tool.poetry]
name = "rovio-ingest"
# NOTE: This version is ignored.
# - Versions are managed by poetry-dynamic-versioning
# - Git tags are used to create new releases
version = "0.0.1"
description = ""
authors = ["Vivek Balakrishnan <vivek.balakrishnan@rovio.com>", "Juho Autio <juho.autio@rovio.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pyspark = "^3.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.4.1"
pyspark-stubs = "^3.0.0"
pandas = "^1.0.3"
jupyter = "^1.0.0"
sparkmagic = "^0.15.0"
boto3 = "*"
safety = "^1.10.3"

[tool.poetry-dynamic-versioning]
enable = true
metadata = true
dirty = true
vcs = "git"
style = "pep440"
format-jinja = """
    {%- if distance == 0 -%}
        {{ serialize_pep440(base, stage, revision) }}
    {%- elif revision is not none -%}
        {{ serialize_pep440(base, stage, revision + 1, dev=distance) }}
    {%- else -%}
        {{ serialize_pep440(bump_version(base), stage, revision, dev=distance) }}
    {%- endif -%}
 """

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
