#
# Copyright 2021 Rovio Entertainment Corporation
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

[tool.poetry]
name = "rovio-ingest"
# NOTE: This version is ignored.
# - Versions are managed by poetry-dynamic-versioning
# - Git tags are used to create new releases
version = "0.0.1"
description = ""
license = "Apache-2.0"
authors = ["Vivek Balakrishnan <vivek.balakrishnan@rovio.com>", "Juho Autio <juho.autio@rovio.com>"]

[tool.poetry.dependencies]
# cryptography requires Python !=3.9.0,!=3.9.1
python = ">3.9.1,<4.0"
pyspark = "^3.4.1"

[tool.poetry.dev-dependencies]
pytest = "8.3.3"
pandas = ">=1.5.3,<2.0.0"
numpy = ">=1.26.4,<2.0.0"
jupyter = "1.1.1"
sparkmagic = "0.21.0"
boto3 = "1.35.19"
safety = "3.2.7"
# Not directly depending on tornado. Set version explicitly to fix vulnerabilities.
tornado = ">=6.5"
# Not directly depending on cryptography. Set version explicitly to fix vulnerabilities.
cryptography=">=44.0.1"
# Not directly depending on h11. Set version explicitly to fix vulnerabilities.
h11=">=0.16.0"
# Not directly depending on setuptools. Set version explicitly to fix vulnerabilities.
setuptools=">=78.1.1"
# Not directly depending on jinja2. Set version explicitly to fix vulnerabilities.
jinja2=">=3.1.6"

[tool.poetry-dynamic-versioning]
enable = true
metadata = true
dirty = true
vcs = "git"
style = "pep440"
format-jinja = """
    {%- if distance == 0 -%}
        {{ serialize_pep440(base, stage, revision) }}
    {%- elif revision is not none -%}
        {{ serialize_pep440(base, stage, revision + 1, dev=distance) }}
    {%- else -%}
        {{ serialize_pep440(bump_version(base), stage, revision, dev=distance) }}
    {%- endif -%}
 """

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
