#
# Copyright 2021 Rovio Entertainment Corporation
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

[project]
name = "rovio-ingest"
dynamic = ["version"]
description = ""
license = "Apache-2.0"
authors = [
    {name = "Vivek Balakrishnan", email = "vivek.balakrishnan@rovio.com"},
    {name = "Juho Autio", email = "juho.autio@rovio.com"},
]
requires-python = ">=3.11,<4.0"
dependencies = [
    "pyspark>=3.4.1,<4.0",  # PySpark 3.x requires Python <3.13
]

[dependency-groups]
dev = [
    "pytest>=8.3.3",
    "pandas>=2.0.0",
    "numpy>=2.0.0",
    "jupyter>=1.1.1",
    "sparkmagic>=0.21.0",
    "boto3>=1.35.19",
    "safety>=3.2.7",
]

[tool.uv-dynamic-versioning]
enable = true
metadata = false
dirty = true
bump = true
vcs = "git"
style = "pep440"

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[[tool.uv.index]]
url = "https://pypi.org/simple"
default = true

